[package]
name = "wsqshed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
names = { version = "0.14.0", default-features = false }
uuid = { version = "1.4.1", features = ["v4","fast-rng"] }
array-init = "2.1.0"
rand = "0.8.5"
csv = "1.3.0"